# TransformerEngine-FL

./: .gitignore  setup.py
build_tools/: pytorch.py  utils.py
qa/L1_pytorch_mcore_integration/: test.sh
transformer_engine/: __init__.py
transformer_engine/common/: __init__.py  test_flash_attention_integration.py
transformer_engine/plugin/: __init__.py  test_utils.py
transformer_engine/plugin/benchmarks/: benchmark_all_backends.py
transformer_engine/plugin/core/: __init__.py  _module_setup.py  builtin_ops.py  discovery.py  ops.py
transformer_engine/plugin/examples/: example_intree.py  example_outtree.py
transformer_engine/plugin/tests/: run_all_tests.py  test_activations.py  test_flash_attention.py  test_fused_rope.py  test_normalization.py  test_operations.py  test_optimizer.py  test_policy.py  test_softmax.py  test_te_general_grouped.py
transformer_engine/plugins/: __init__.py  backend.py  import_utils.py  register.py  test_flash_attention_integration.py  test_utils.py
transformer_engine/plugins/benchmarks/: benchmark_all_backends.py
transformer_engine/plugins/tests/: __init__.py  run_all_tests.py  run_vendor_tests.py  test_activations.py  test_fallback.py  test_flash_attention_integration.py  test_normalization.py  test_operations.py  test_plugin_system.py  test_utils.py  test_vendor_intree.py  test_vendor_outtree.py  test_vendor_plugin_example.py
transformer_engine/plugins/tests/example_outtree_plugin/: .gitignore  MANIFEST.in  README.md  pyproject.toml
transformer_engine/plugins/tests/example_outtree_plugin/acme_te_plugin/: __init__.py
transformer_engine/plugins/tex_interface/: README.md  __init__.py  _build_config.py.template  base.py  logger.py  (+4 more)
transformer_engine/pytorch/: _tex_stub.py
(+89 files in other folders)
